--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background-image: url('../../Assets/Nairobipa.jpg');
+    background-image: url('../../Assets/Nairobi22.jpg');
   
     /* Set a specific height */
     min-height: 100vh;
