--- a/src/Components/Testmonials/Testimonials.css
+++ b/src/Components/Testmonials/Testimonials.css
@@ -1,7 +1,8 @@
 .carousel-root {
-    width: 64% !important;
+    width: 50% !important;
     margin: auto !important;
     margin-top: 3% !important;
+    min-height: 300px;
   }
   
   .carousel .slide {
@@ -17,16 +18,17 @@
   
   .myCarousel {
     background: #fafafa;
-    margin-top: -6%;
-    width: 54%;
+    margin-top: 6%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     padding-top: 6%;
     padding-bottom: 8%;
     padding-left: 5%;
     padding-right: 5%;
-    border: 1px solid #ddd;
-    height: 286px;
+    /* border: 1px solid #ddd; */
+    /* min-height: 200px; */
+    margin-bottom: 6%;
   } 
   
   .carousel .control-dots {
@@ -37,10 +39,9 @@
   
   .myCarousel h3 {
     color: #222;
-    font-weight: 100;
+    font-weight: bold;
     letter-spacing: 0.2px;
     margin-bottom: 4px;
-    font-weight: 600;
     text-transform: uppercase;
     font-size: 17px;
   }
@@ -60,7 +61,7 @@
     color: #222;
     font-size: 15px;
     font-family: sans-serif;
-    max-height: 67px;
+    /* max-height: 67px; */
   }
   
   .myCarousel p:before {
@@ -102,14 +103,15 @@
       outline: 0;
       width: 93% !important;
       margin: auto !important;
+      margin-top: 20%;
     }
   
-    .carousel.carousel-slider .control-arrow {
+    /* .carousel.carousel-slider .control-arrow {
       display: none !important;
-    }
+    } */
     .myCarousel {
       background: #fafafa;
-      margin-top: -9%;
+      margin-top: 9%;
       width: 88%;
       margin-left: auto;
       margin-right: auto;
@@ -117,8 +119,8 @@
       padding-bottom: 12.5%;
       padding-left: 5%;
       padding-right: 5%;
-      border: 1px solid #ddd;
-      height: 269px;
+      /* border: 1px solid #ddd; */
+      min-height: 269px;
     }
   
     .carousel .slide img {
